samples/_failures_safe/1761376359_a60556_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d79e588.c: In function ‘main’:
./samples/SAFE/__tmp_8d79e588.c:187:16: error: missing terminating " character
  187 |         printf("Too many tokens
      |                ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8d79e588.c:187:9: error: expected expression at end of input
  187 |         printf("Too many tokens
      |         ^~~~~~
./samples/SAFE/__tmp_8d79e588.c:187:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8d79e588.c:187:9: error: expected declaration or statement at end of input
